--- a/allproduct.html
+++ b/allproduct.html
@@ -14,6 +14,8 @@
         Show Cart Product
       </button>
     </div>
+
+    <!-- Script Tags -->
     <script src="allproduct.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
